partie mcp-server

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.application.name=chatbot
-spring.ai.openai.api-key=
+spring.ai.openai.api-key=${OPENAI_API_KEY}
 spring.ai.openai.chat.options.model=gpt-4o
 server.port=8087
+spring.ai.mcp.client.streamable-http.connections.mcpkel.url=http://localhost:7777/mcp
