--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,4 @@ spring.ai.openai.api-key=${OPENAI_API_KEY}
 spring.ai.openai.chat.options.model=gpt-4o
 server.port=8087
 spring.ai.mcp.client.streamable-http.connections.mcpkel.url=http://localhost:7777/mcp
+telegram.api.key=8586719502:AAEUJiJvUoc70eMZk4t1ijDOyM7Y1iz0k8c
